src/objects/Partner_Organisation_Resources__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health &amp; Social Care</fullName>
                </value>
                <value>
                    <fullName>Local Authority</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Public Service</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Housing</fullName>
                </value>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Sport &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Power &amp; Utilities</fullName>
                </value>
                <value>
                    <fullName>Allied Healthcare Professionals</fullName>
                </value>
                <value>
                    <fullName>Other(please specify)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_added__c</fullName>
        <label>Date added</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Organisation Resources</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>POR{00000}</displayFormat>
        <label>Partner Organisation Resources Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Organisation Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>